Finished menus styling

--- a/src/scss/components/base.scss
+++ b/src/scss/components/base.scss
@@ -4,14 +4,10 @@
   font-weight: 800;
 }
 
-main {
-  min-height: 100vh;
-}
-
-body{
+html {
   background-color: lightblue;
 }
 
-.map-tasksNewPAge{
+.map-tasksNewPage{
   height: 200px;
 }
