--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,3 +15,5 @@
 @import 'components/tasksIndex';
 @import 'components/cards';
 @import 'components/modal';
+@import 'components/usersShow';
+@import 'components/tasksNew';
