--- a/src/views/tasks/edit.html
+++ b/src/views/tasks/edit.html
@@ -1,50 +1,64 @@
-<h1>Edit TASK</h1>
-<form name="tasksEdit.form" ng-submit="tasksEdit.handleUpdate()" novalidate>
-    <div class="field">
-      <div class="control">
-        <div class="select is-primary">
-          <select ng-model="tasksEdit.task.title">
-            <option>Your Task?</option>
-            <option value="dishwashing">Dishwashing</option>
-            <option value="takeOutRecyclingAndBins">Take out Recycling and Bins</option>
-            <option value="changeTheBedSheets">Change the bed sheets</option>
-            <option value="takeCareOfBins">Take out bins and recycling</option>
-            <option value="checkAndChangeLightbulbs">Check and change light bulbs</option>
-            <option value="cleanKitchen">Clean Kitchen</option>
-            <option value="cleanBathroom">Clean Bathroom</option>
-            <option value="cleanBedroom">Clean Bedroom</option>
-            <option value="cleanLivingRoom">Clean Living Room</option>
-            <option value="deepClean">Deep-Clean</option>
-            <option value="foodShopping">food Shopping</option>
-            <option value="cleaningEquipment">Cleaning Equipment</option>
-            <option value="ikea">Ikea</option>
-            <option value="walkTheDog">Walk the Dog</option>
-            <option value="cleanOutTheCar">Clean out the Car</option>
-            <option value="workOnGarden">Work on Garden</option>
-            <option value="exercise">Exercise</option>
-            <option value="updatingComputerSoftware">Updating computer/software</option>
-            <option value="clothesWashing">Clothes Washing</option>
-          </select>
+<div class="card-background">
+  <form name="tasksEdit.form" ng-submit="tasksEdit.handleUpdate()" novalidate>
+    <div class="input-fields">
+      <h1>Edit Task</h1>
+      <div class="field">
+        <div class="control">
+          <label for="title">Task Type (required)</label>
+          <div class="select is-primary" name="title">
+            <select ng-model="tasksEdit.task.title">
+              <option value="dishwashing">Dishwashing</option>
+              <option value="takeOutRecyclingAndBins">Take out Recycling and Bins</option>
+              <option value="changeTheBedSheets">Change the bed sheets</option>
+              <option value="takeCareOfBins">Take out bins and recycling</option>
+              <option value="checkAndChangeLightbulbs">Check and change light bulbs</option>
+              <option value="cleanKitchen">Clean Kitchen</option>
+              <option value="cleanBathroom">Clean Bathroom</option>
+              <option value="cleanBedroom">Clean Bedroom</option>
+              <option value="cleanLivingRoom">Clean Living Room</option>
+              <option value="deepClean">Deep-Clean</option>
+              <option value="foodShopping">food Shopping</option>
+              <option value="cleaningEquipment">Cleaning Equipment</option>
+              <option value="ikea">Ikea</option>
+              <option value="walkTheDog">Walk the Dog</option>
+              <option value="cleanOutTheCar">Clean out the Car</option>
+              <option value="workOnGarden">Work on Garden</option>
+              <option value="exercise">Exercise</option>
+              <option value="updatingComputerSoftware">Updating computer/software</option>
+              <option value="clothesWashing">Clothes Washing</option>
+            </select>
+          </div>
         </div>
       </div>
+      <div class="field">
+        <label for="description">Description</label>
+        <input value="{{tasksEdit.task.description}}" class="input" placeholder="Description" name="description" ng-model="tasksEdit.task.description"/>
+      </div>
+      <div class="time-and-date">
+        <div class="field">
+          <label for="dueDate">Due-Date</label>
+          <input type="date" class="input" placeholder="DueDate" name="dueDate" ng-model="tasksEdit.task.dueDate"/>
+        </div>
+        <div class="field">
+          <label for="dueDate">Time</label>
+          <input value="{{tasksEdit.task.time}}" type="time" class="input" placeholder="Time" name="time" ng-model="tasksEdit.task.time"/>
+        </div>
+      </div>
+      <div class="field">
+        <label for="location">Location</label>
+        <input class="input" placeholder="Change the location of your task?" name="location" g-autocomplete handle-change="tasksEdit.updateLocation(location)" />
+      </div>
     </div>
-  <div class="field">
-    <label for="description">Description</label>
-    <input value="{{tasksEdit.task.description}}" class="input" placeholder="Description" name="description" ng-model="tasksEdit.task.description"/>
-  </div>
-  <div class="field">
-    <label for="dueDate">Due-Date</label>
-    <input type="date" class="input" placeholder="DueDate" name="dueDate" ng-model="tasksEdit.task.dueDate"/>
-  </div>
-  <div class="field">
-    <label for="location">Location</label>
-    <input class="input" placeholder="Change the location of your task?" name="location" g-autocomplete handle-change="tasksEdit.updateLocation(location)" />
-  </div>
-  <div ng-if="tasksEdit.task.location" class="map" g-map center="tasksEdit.task.location">GOOGLE MAP GOES HERE</div>
-  <div class="field">
-    <label for="dueDate">Time</label>
-    <input value="{{tasksEdit.task.time}}" type="time" class="input" placeholder="Time" name="time" ng-model="tasksEdit.task.time"/>
-  </div>
-  <button class="button is-primary">Submit</button>
-  <button ng-click="tasksEdit.handleDelete()" class="button is-danger">Delete</button>
-</form>
+    <div ng-if="tasksEdit.task.location" class="map-tasksNewPage" g-map center="tasksEdit.task.location">GOOGLE MAP GOES HERE</div>
+    <button class="button is-primary">
+      <i class="fas fa-save"></i>
+      &nbsp
+      Save Edits
+    </button>
+    <button ng-click="tasksEdit.handleDelete()" class="button is-danger">
+      <i class="fas fa-trash-alt"></i>
+      &nbsp
+      Delete Task
+    </button>
+  </form>
+</div>
