--- a/src/views/tasks/index.html
+++ b/src/views/tasks/index.html
@@ -25,7 +25,7 @@
               <p class="is-4">{{ task.displayDescrpition }}</p>
             </div>
             <div class="expand-div has-text-centered">
-              <button class="expand" ng-click="tasksIndex.openModal(task._id)">
+              <button class="expand" ng-click="tasksIndex.selectTask(task)">
                 <i class="fas fa-expand-arrows-alt"></i>
                 &nbsp
                 View More
@@ -52,11 +52,11 @@
         </button>
       </div>
 
-      <div class="modal" id="{{task._id}}">
+      <div class="modal" ng-class="{ 'is-active': tasksIndex.isSelectedTask(task) }">
         <div class="modal-card backcolor">
           <section class="modal-card-body margin-modal">
             <div class="is-pulled-right">
-              <button ng-click="tasksIndex.openModal(task._id)" class="close-modal" aria-label="close">
+              <button ng-click="unSelectTask()" class="close-modal" aria-label="close">
                 <i class="fas fa-times-circle"></i>
               </button>
             </div>
@@ -114,7 +114,7 @@
               <p class="is-4">{{ task.displayDescrpition }}</p>
             </div>
             <div class="expand-div has-text-centered">
-              <button class="expand" ng-click="tasksIndex.openModal(task._id)">
+              <button class="expand" ng-click="tasksIndex.selectTask(task)">
                 <i class="fas fa-expand-arrows-alt"></i>
                 &nbsp
                 View More
@@ -140,11 +140,11 @@
           Complete
         </button>
       </div>
-      <div class="modal" id="{{task._id}}">
+      <div class="modal" ng-class="{ 'is-active': tasksIndex.isSelectedTask(task) }">
         <div class="modal-card backcolor">
           <section class="modal-card-body margin-modal">
             <div class="is-pulled-right">
-              <button ng-click="tasksIndex.openModal(task._id)" class="close-modal" aria-label="close">
+              <button ng-click="tasksIndex.unSelectTask()" class="close-modal" aria-label="close">
                 <i class="fas fa-times-circle"></i>
               </button>
             </div>
@@ -201,7 +201,7 @@
               <p class="is-4">{{ task.displayDescrpition }}</p>
             </div>
             <div class="expand-div has-text-centered">
-              <button class="expand" ng-click="tasksIndex.openModal(task._id)">
+              <button class="expand" ng-click="tasksIndex.selectTask(task)">
                 <i class="fas fa-expand-arrows-alt"></i>
                 &nbsp
                 View More
@@ -227,11 +227,11 @@
           Complete
         </button>
       </div>
-      <div class="modal" id="{{task._id}}">
+      <div class="modal" ng-class="{ 'is-active': tasksIndex.isSelectedTask(task) }">
         <div class="modal-card backcolor">
           <section class="modal-card-body margin-modal">
             <div class="is-pulled-right">
-              <button ng-click="tasksIndex.openModal(task._id)" class="close-modal" aria-label="close">
+              <button ng-click="tasksIndex.unSelectTask()" class="close-modal" aria-label="close">
                 <i class="fas fa-times-circle"></i>
               </button>
             </div>
