started data visualisation stuff

--- a/src/views/auth/edit.html
+++ b/src/views/auth/edit.html
@@ -1,20 +1,30 @@
-<form ng-submit="usersEdit.handleUsersEdit()">
-  <div class="field">
-    <label for="username">Username</label>
-    <input class="input" placeholder="Username" name="username" ng-model="usersEdit.user.username" />
-  </div>
-  <div class="field">
-    <label for="email">Email</label>
-    <input class="input" placeholder="Email" name="email" ng-model="usersEdit.user.email" />
-  </div>
-  <div class="field">
-    <!-- <label for="password">Password</label> -->
-    <input class="input" type="hidden" placeholder="Password" name="password" ng-model="usersEdit.user.password" />
-  </div>
-  <div class="field">
-    <!-- <label for="passwordConfirmation">Password Confirmation</label> -->
-    <input class="input" type="hidden" placeholder="Password Confirmation" name="passwordConfirmation" ng-model="usersEdit.user.passwordConfirmation" />
-  </div>
-  <button class="button is-primary">Submit</button>
-  <button class="button is-danger" ng-click="usersEdit.handleUsersDelete()" class="button">Delete Profile</button>
-</form>
+<div class="useredit card-background">
+  <form ng-submit="usersEdit.handleUsersEdit()">
+    <div class="input-fields">
+      <div class="field">
+        <label for="username">Username</label>
+        <input class="input" placeholder="Username" name="username" ng-model="usersEdit.user.username" />
+      </div>
+      <div class="field">
+        <label for="email">Email</label>
+        <input class="input" placeholder="Email" name="email" ng-model="usersEdit.user.email" />
+      </div>
+      <div class="field">
+        <input class="input" type="hidden" placeholder="Password" name="password" ng-model="usersEdit.user.password" />
+      </div>
+      <div class="field">
+        <input class="input" type="hidden" placeholder="Password Confirmation" name="passwordConfirmation" ng-model="usersEdit.user.passwordConfirmation" />
+      </div>
+    </div>
+    <button class="button is-primary">
+      <i class="fas fa-save"></i>
+      &nbsp
+      Save Changes
+    </button>
+    <button class="button is-danger" ng-click="usersEdit.handleUsersDelete()" class="button">
+      <i class="fas fa-trash-alt"></i>
+      &nbsp
+      Delete Profile
+    </button>
+  </form>
+</div>
