--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -17,3 +17,5 @@
 @import 'components/modal';
 @import 'components/usersShow';
 @import 'components/tasksNew';
+@import 'components/errormessages';
+@import 'components/totalscoremeter';
